--- a/Project2/Project2/Project2.vcxproj.filters
+++ b/Project2/Project2/Project2.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClCompile Include="SmartPlayer.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="CommonPlayer.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Player.h">
@@ -93,6 +96,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="SmartPlayer.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="CommonPlayer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
