added PlayerBoard and GameBoard and some changed related to them NOT FINISHED!

--- a/Project2/Project2/Project2.vcxproj
+++ b/Project2/Project2/Project2.vcxproj
@@ -117,9 +117,11 @@
     <ClCompile Include="FilesListerWithSuffix.cpp" />
     <ClCompile Include="FixedPlayer.cpp" />
     <ClCompile Include="Game.cpp" />
+    <ClCompile Include="GameBoard.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="NaivePlayer.cpp" />
     <ClCompile Include="Player.cpp" />
+    <ClCompile Include="PlayerBoard.cpp" />
     <ClCompile Include="Point.cpp" />
     <ClCompile Include="SmartPlayer.cpp" />
   </ItemGroup>
@@ -134,9 +136,11 @@
     <ClInclude Include="FilesListerWithSuffix.h" />
     <ClInclude Include="FixedPlayer.h" />
     <ClInclude Include="Game.h" />
+    <ClInclude Include="GameBoard.h" />
     <ClInclude Include="IBattleshipGameAlgo.h" />
     <ClInclude Include="NaivePlayer.h" />
     <ClInclude Include="Player.h" />
+    <ClInclude Include="PlayerBoard.h" />
     <ClInclude Include="Point.h" />
     <ClInclude Include="SeaBattleBoardLister.h" />
     <ClInclude Include="SmartPlayer.h" />
