--- a/ex3/ex3/ex3.vcxproj.filters
+++ b/ex3/ex3/ex3.vcxproj.filters
@@ -62,5 +62,8 @@
     <ClCompile Include="main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="PlayerData.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
