--- a/ex3/ex3/ex3.vcxproj.filters
+++ b/ex3/ex3/ex3.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClCompile Include="TournamentManager.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="gameBoard.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Logger.h">
@@ -84,6 +87,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="TournamentManager.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="gameBoard.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
