--- a/Project4/Project4/Project4.vcxproj
+++ b/Project4/Project4/Project4.vcxproj
@@ -111,6 +111,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="Matrix.h" />
+    <ClInclude Include="MatrixCopier.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
