--- a/Project4/Project4/Project4.vcxproj.filters
+++ b/Project4/Project4/Project4.vcxproj.filters
@@ -18,6 +18,9 @@
     <ClInclude Include="Matrix.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="MatrixCopier.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
